fix crap footer style on mobile devices, while simplfying footer CSS generally

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -122,4 +122,8 @@
 
 #main-menu {
   background-color: $header-bg;
+
+  li {
+    text-align: center;
+  }
 }
